[ADD] sent contact

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.4",
+    "dotenv": "^16.0.1",
+    "net": "^1.0.2",
     "next": "12.1.6",
+    "nodemailer": "^6.7.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0"
